...
    "catalog.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Catalog"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Каталог"
...
    "home.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Главная"
...
    "progress.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Progress"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Прогресс"
...
    "study.result.excellent": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Excellent!"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Отлично!"
...
